pipes:lowercase,uppercase,titlecase,currencydate,json

--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -10,6 +10,14 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div style="text-align:center">
+ <h1>  {{message | titlecase}} </h1>
+ <h2> {{amount | currency:'USD'}}</h2>
+</div>
+
+<div style="text-align:center" class="alert alert-success">
+  <p>{{activities | json}} </p>
+   </div>
 
 <div class="container">
   <h2>Bordered Table</h2>
@@ -26,8 +34,8 @@
     <tbody>
       <tr class="table-secondary" *ngFor="let activity of activities" >
         <td>{{activity.id}}</td>
-        <td>{{activity.title}}</td>
-        <td>{{activity.dueDate}}</td> 
+        <td>{{activity.title | lowercase}}</td>
+        <td>{{activity.dueDate | date :'shortTime'}}</td> 
         <td><div [ngSwitch]="activity.status">
           <span *ngSwitchCase="0">
             Not Completed
