Implementation of Custom Pipeline with multiple arguments

--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -29,6 +29,7 @@
         <th>6 Run</th>
         <th>Others</th>
         <th>Age</th>
+        <th>Score</th>
       </tr>
     </thead>
     <tbody>
@@ -40,6 +41,7 @@
         <td>{{player.noOf6}}</td>
         <td>{{player.others}}</td>
         <td>{{player.dob | age}}</td>
+        <td>{{player.others | score :player.noOf4:player.noOf6 }}</td>
       </tr>
     </tbody>
   </table>
